--- a/templates/mics.html
+++ b/templates/mics.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!-- <!doctype html>
 <html>
 <head>
 </head>
@@ -54,7 +54,7 @@ const myChart = new Chart(ctx, {
 </html>
 
 
-
+ -->
 <table id="services">
     <tr>
         <th>Clinic Services and Profile</th>
