--- a/templates/show_list.html
+++ b/templates/show_list.html
@@ -2,23 +2,10 @@
 
 {% block content %}
 
-<!-- <script>
-
-function fetchData() {
-    fetch('https://maps.googleapis.com/maps/api/place/findplacefromtext/json?input=Museum%20of%20Contemporary%20Art%20Australia&inputtype=textquery&fields=photos,formatted_address,name,rating,opening_hours,geometry&key=AIzaSyDfjxfPTabsjVyZPQT1zp9L1VaB9sjvwxc')
-      .then(function(response) {
-        console.log(response);
-        return response.json();
-      })
-      .then(function(myJson) {
-        console.log(JSON.stringify(myJson));
-      });
-}
-</script>     -->
 
 <h4>CLINICS IN {{ user_city }}, {{ user_state }}</h4> 
 
-    <table>
+    <table id="clinic_list">
         <tr>
             <th>Clinic Name</th>
             <th>State</th>
