--- a/static/styles.css
+++ b/static/styles.css
@@ -7,5 +7,159 @@
     /*visibility: hidden;*/
 }
 
+.img-fluid { max-width: 100%; and height: auto;}
 
- 
+body .container-fluid {
+  background: url("ivf.jpg") no-repeat center center;
+  background-size: cover;
+}
+
+.table-responsive{-sm|-md|-lg|-xl}
+
+video {
+    width: 100%;
+    position: absolute;
+    z-index: -1;
+}
+
+header {
+    position: relative;
+}
+
+/*styling background video*/
+/**{box-sizing: border-box;}
+body{margin: 0;
+    font-family: Segoe, Segoe UI, DejaVu Sans, Trebuchet MS, Verdana," sans-serif";
+    font-size: 1rem;
+    line-height: 1.5rem;
+    color: #333;
+    overflow-x: hiden;
+    }
+
+.video-header {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    color: aliceblue;
+    }
+
+.wrap {
+    max-width: 960px;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    margin: auto;
+    text-align: center;
+    }
+
+.fullcreen-video-wrap {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100%;
+
+    }
+
+.fullscreen-video-wrap video {
+    min-height: 100%;
+    min-width: 100%;
+    }
+
+.header-overlay(height: 100vh;
+    width: 100vw;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: rgba(34, 33, 33, 0.65);
+    opacidty: 0.80;
+    )
+
+.header-content {
+    z-index: 2;
+    margin-top: 20%;
+    padding: 0 5rem;
+    }
+
+.header-content h1 {
+    font-size: 50px;
+    margin-bottom: 0;
+}
+
+.header-content p{
+    font-size: 1.5rem;
+    display: block;
+    padding-bottom: 2rem;
+    margin-top: 10px;
+}
+
+.my-btn{
+    padding: .5rem 1rem;
+
+}
+
+@media(max-width: 768px){
+    background: url('background: url('https://www.youtube.com/embed/qahbjFkfPiE?autoplay=1&modestbranding=1'
+frameborder="0") black no-repeat center center scroll;") 
+    .header-content h1{font-size: 40px;}
+    .header-content p{font-size: 1rem;}
+}
+
+section{text-align: center; margin-top: 50x; font-size:1.5 rem;}
+
+
+.navbar {
+    z-index: 10;
+
+}
+
+.my-nav .nav-link{color: aliceblue;}
+.my-nav .navbar-brand{color: aliceblue;}
+
+
+
+header {
+  position: relative;
+  background-color: black;
+  height: 75vh;
+  min-height: 25rem;
+  width: 100%;
+  overflow: hidden;
+}
+
+header video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: 0;
+  -ms-transform: translateX(-50%) translateY(-50%);
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+}
+
+header .container {
+  position: relative;
+  z-index: 2;
+}
+
+header .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: black;
+  opacity: 0.5;
+  z-index: 1;
+}
+
+@media (pointer: coarse) and (hover: none) {
+  header {
+    background: url('') black no-repeat center center scroll;
+  }
+  
+}*/
