--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,19 +1,118 @@
 {% extends 'base.html' %}
-{% block content %}
 
-  <h1>Clinic Names and Success Rates</h1>
 
-  <h2>Clinics</h2>
-  <p>
-    <h4>Locate a Fertility Clinic</h4>
-    <form action='/list'
-  </p>
+{% block title %}
 
-  <!-- <h2>Services</h2>
-  <p>
-    <a href="/users">View all users</a>
-  </p> -->
-
+    <style>
+      /* Set the size of the div element that contains the map */
+      #map {
+        /*height: 400px;   The height is 400 pixels */
+        width: 100%;  /* The width is the width of the web page */
+       }
+        html, body {
+            height: 100%;
+        }
+    </style>
 {% endblock %}
 
 
+{% block content %}
+
+<!-- load video as background -->
+<!-- <link rel="stylesheet" href='/templates/fullscreen_video.html'> -->
+
+<!-- div for video background -->
+<header class="align-items-center d-flex justify-content-center">
+
+     <!-- <div class="overlay"></div> -->
+      <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+        <source src="/static/icsi.mp4" type="video/mp4">
+      </video>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h3>Locate a Fertility Clinic</h3>
+
+            <!-- Create a search bar -->
+            <form id='user_input_form' action='/get-state-city' method='POST'>
+            Use the map below and select a city and a state to locate fertility clinics near you. Learn about the services they provide, the types of patients they see, and their success rates.<br><br>
+            
+            Location:
+                <input type="text" id="autocomplete-location" name='location'/>
+                <input type='submit' id='go' value="Go"><br><br>
+            </form>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <!-- <section class="my-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 mx-auto">
+            
+            <p class="mb-0">
+              Created by <a href="https://startbootstrap.com">Start Bootstrap</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+ -->
+
+
+
+<!-- <div class='video-header wrap'>
+    <div class='fullscreen-video-wrap'>
+            
+        <video src="/video/icsi.mp4" autoplay loop></video>
+    </div>
+               
+            
+    <div class='header-overlay'>
+        <div class='header-content'>
+            <a class="btn btn-success my-btn mt-4">Know more &gt</a>
+        </div>
+    </div>
+</div>
+<section class="section section-a">
+    <div class="container">
+        <h1>Thank you for watching </h1>
+        <p>Lorem</p>
+    </div>
+</section> -->
+
+    
+    
+            
+
+         
+    <!--The div element for autocomplete search bar -->
+    
+
+    <script>
+
+        function initAutocomplete() {
+            
+            const autocomplete1 = new google.maps.places.Autocomplete(
+                document.getElementById('autocomplete-location'),
+                { types: [ '(cities)' ] }
+            );
+
+            google.maps.event.addListener(autocomplete1, 'place_changed', function(){
+                var place = autocomplete1.getPlace();
+                
+            })
+        }
+
+                
+    </script>
+
+    <script async defer type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA1y8atwwt1qwp5VH6k-Wm1Xwqkuw3IgxM&libraries=places&callback=initAutocomplete"></script>
+
+    <!-- <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA1y8atwwt1qwp5VH6k-Wm1Xwqkuw3IgxM&callback=initMap">
+    </script> -->
+    
+
+{% endblock %}
