--- a/templates/base.html
+++ b/templates/base.html
@@ -20,13 +20,21 @@
 <body>
 
 <!-- create navbar for each page -->
-<nav style="background-color: black;" class="navbar navbar-expand-lg my-nav">
+<nav style="background-color: #3C5B4D;" class="navbar navbar-expand-lg my-nav">
 
-<a id="home" class="navbar-brand" href="/">HOME</a>
+<a id="home" class="navbar-brand" href="/"><i>ART Guidelines</i> Home</a>
 
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
 </button>
+<div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+            <a class="nav-link" href="https://www.asrm.org/news-and-publications/news-and-research/">News</a>
+        </li>
+    </ul>
+</div>
+
 </nav>
 
 
