--- a/templates/mics.html
+++ b/templates/mics.html
@@ -1,3 +1,6 @@
+
+
+style="height: 2rem; margin-top: 1rem; padding-left: 1rem; background-color: darkgray; color: white; width: 100%; border: black solid 1px"
 <!-- <!doctype html>
 <html>
 <head>
