--- a/templates/show_services_rates.html
+++ b/templates/show_services_rates.html
@@ -10,44 +10,41 @@
         <td>No</td>
     {% endif %}
 {% endmacro %}
+
+
 <div style="margin:2rem;">
-<h1>View ART Data:</h2><br><br>
+<h2>View ART Data:</h2><br><br>
 
 
-<div class="center_text">
-<h2>{{ clinic_name }}</h2>
-<h3>{{ clinic_address }}</h3>
+<div class="container"> 
+    <div class="row allign-items-center">
+        <div class="col">
+            <h3>{{ clinic_name }}</h2>
+            <h5>{{ clinic_address }}</h3>
+        </div>
+        
+        <div class="col">
+            <div id="clinic_map" style="height: 400px; width:400px"></div>
+        </div>
+    </div>
 </div>
 
-<div id="services_rates">
-    <!-- Begin centered main text -->
-      <div class="row align-items-center">
-        <section class="col-6 mx-auto" id="splash">
-          
-          <p><p>
-        </section>
-    </div>
-
-      
-
-
-<div class="service_table">
-<section class="col-10 mx-auto d-lg-block d-md-block d-none">
-<table>
-    <tr>
-        <th>Clinic Services and Profile</th>
-        <td>Member of SART</td>
-        <td>Gestational carrier services</td>
-        <td>Services for single women</td>
-        <td>Egg cryopreservation services</td>
-        <td>Embryo cryopreservation services</td>
-        <td>Donor embryo services</td>
-        <td>Donor egg services</td>
-    </tr>
-    <tr>
-
-        <td></td>
-        <td>
+<div class="container">
+    Clinic Services and Profile
+    <div class="row allign-items-center">
+        <div class="col-6 col-md-4">
+            <ul>
+                <li>Member of SART</li>
+                <li>Gestational carrier services</li>
+                <li>Services for single women</li>
+                <li>Egg cryopreservation services</li>
+                <li>Embryo cryopreservation services</li>
+                <li>Donor embryo services</li>
+                <li>Donor egg services</li>
+            </ul>
+        </div>
+        <div class="col-6 col-md-4">
+            <ul>
             {% for service in [user_services.is_sart,
                                user_services.is_surrogates,
                                user_services.is_single,
@@ -56,25 +53,27 @@
                                user_services.is_donor_emb,
                                user_services.is_donor_egg]
             %}
-                {{ create_service_td(service) }}
-            {% endfor %}
-        </td>
-    </tr>
+            <li>{{ create_service_td(service) }}</li>
         
-    
-</table>
+   
+            {% endfor %}
+            </ul>
+        </div>
 </div>
+    
 
-<div style="height: 2rem; margin-top: 1rem; padding-left: 1rem; background-color: darkgray; color: white"> Fresh Embryo</div>
+
+<div class="treatment-type-fresh"> Fresh Embryo</div>
+    <div class="rate-table">
     What is the chance of having multiple live births?<br>
-        Age of woman
-        <table id="fresh_mul" style="border:1px solid green">
-            <tr>
-                <th></th>
-                <th>Less than 35</th>
+        
+        <table class="table table-bordered" id="fresh_mul">
+            <tr class="thead-dark">
+                <th>Age of Woman</th>
+                <th><35</th>
                 <th>35-37</th>
                 <th>38-40</th>
-                <th>More than 40</th>
+                <th>>40</th>
             </tr>
             <tr>
                 <td>Clinic</td>
@@ -83,19 +82,19 @@
                 <td>{{ rate.fresh_mul_3 }}</td>
                 <td>{{ rate.fresh_mul_4 }}</td>
             </tr>
-        </table><br>
+        </table>
+    </div>
+    <div class="rate-table">
 
-Fresh embryo:<br><br>
-
-What is the chance of having a term, normal birth weight and singleton live birth?<br>
-        Age of woman
-        <table id="fresh_sin" style="border:1px solid blue">
-            <tr>
-                <th></th>
-                <th>Less than 35</th>
+    What is the chance of having a term, normal birth weight and singleton live birth?<br>
+        
+        <table class="table table-bordered" id="fresh_sin">
+            <tr class="thead-dark">
+                <th>Age of Woman</th>
+                <th><35</th>
                 <th>35-37</th>
                 <th>38-40</th>
-                <th>More than 40</th>
+                <th>>40</th>
             </tr>
             <tr>
                 <td>Clinic</td>
@@ -104,20 +103,28 @@ What is the chance of having a term, normal birth weight and singleton live birt
                 <td>{{ rate.fresh_sin_3 }}</td>
                 <td>{{ rate.fresh_sin_4 }}</td>
             </tr>
-        </table><br>
+        </table>
+    </div>
+
+ 
+    <div class="clinicChart" >
+        <canvas id="barChartFresh"></canvas>
+    </div>
+</div>
 
 
+<div class="treatment-type-frozen"> Frozen Embryo</div>
+    <div class="rate-table">
 
-Frozen embryo:<br><br>
     What is the chance of having multiple live births?<br>
-        Age of woman
-        <table id="fro_mul" style="border:1px solid purple">
-            <tr>
-                <th></th>
-                <th>Less than 35</th>
+        
+        <table class="table table-bordered" id="fro_mul">
+            <tr class="thead-dark">
+                <th>Age of Woman</th>
+                <th><35</th>
                 <th>35-37</th>
                 <th>38-40</th>
-                <th>More than 40</th>
+                <th>>40</th>
             </tr>
             <tr>
 
@@ -127,18 +134,19 @@ Frozen embryo:<br><br>
                 <td>{{ rate.fro_mul_3 }}</td>
                 <td>{{ rate.fro_mul_4 }}</td>
             </tr>
-        </table><br>
+        </table>
+    </div>
+    <div class="rate-table">
 
-Frozen embryo:<br><br>
     What is the chance of having a term, normal birth weight and singleton live birth?<br>
-        Age of woman
-        <table id="fro_sin">
-            <tr>
-                <th></th>
-                <th>Less than 35</th>
+      
+        <table class="table table-bordered" id="fro_sin">
+            <tr class="thead-dark">
+                <th>Age of Woman</th>
+                <th><35</th>
                 <th>35-37</th>
                 <th>38-40</th>
-                <th>More than 40</th>
+                <th>>40</th>
             </tr>
             <tr>
                 <td>Clinic</td>
@@ -148,18 +156,15 @@ Frozen embryo:<br><br>
                 <td>{{ rate.fro_sin_4 }}</td>
             </tr>
         </table>
-        
-
-<button id="get-chart-button">Please click here for each clinic's charts</button>
-
-<div class="clinicCharts">  
-    <div class="clinicChart" >
-        <canvas id="barChartFresh"></canvas>
     </div>
+
     <div class="clinicChart">
         <canvas id="barChartFrozen"></canvas>
     </div>
 </div>
+
+
+
 
 <script>
     
@@ -265,18 +270,6 @@ Frozen embryo:<br><br>
 
 </script>
 
-<div  id="visibleCharts" onClick="makeInvisible();">
-<script>
-    function makeVisible() {
-
-
-$("get-chart-button").on('click', makeVisible())
-            }
-</script>
-
-
-
-<div id="clinic_map" style="height: 800px; width:800px"></div>
 
 <script>
 
@@ -312,7 +305,7 @@ $("get-chart-button").on('click', makeVisible())
 </div>
 </div>
 
-
+</div>
 
 
 
